tests/scan/fixtures/validation/negative/clean_go_typosquat_unique/cleanlib.go
package cleanlib

func Add(a, b int) int {
	return a + b
}
